test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-shared-from-nonnil-borrowed.good
init-field-dflt-nonnil-shared-from-nonnil-borrowed.chpl:8: error: Cannot initialize 'lhs' of type shared MyClass from a 'borrowed MyClass'
